fix:cards-list content align

--- a/src/components/ui/cards-list/cards-list.module.css
+++ b/src/components/ui/cards-list/cards-list.module.css
@@ -1,6 +1,5 @@
 .cards-list {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 50px;
 }
